--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -13,7 +13,9 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
+    "@mui/x-date-pickers": "^8.14.1",
     "classnames": "^2.5.1",
+    "dayjs": "^1.11.18",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-css-modules": "^4.7.11",
@@ -25,6 +27,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-input-mask": "^3.0.6",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "typescript": "^5"
