--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
+    "@mui/x-charts": "^8.14.1",
     "@mui/x-date-pickers": "^8.14.1",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.18",
